fixing overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
 }
 
 html {
-    
+    overflow-x: hidden !important;
     font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
     background-color: var(--color-grey);
     // border: solid 2px var(--color-blue);
